src/styles/globals.css
body {
  font-family: var(--font-primary);
  font-weight: var(--font-primary-regular);
  display: flex;
  flex-direction: column;
}

h1 {
  font-weight: var(--font-primary-semibold);
  font-size: 64px;

}

h2 {
  font-weight: var(--font-primary-semibold);
  font-size: 32px;
}

button {
  background: none;        
  border: 2px solid var(--color-accent-accent);   
  border-radius: 50px;       
  box-shadow: none;
  color: var(--color-accent);
  padding: 0;             
  margin: 0;              
  font: inherit;           
text-transform: uppercase;
    font-size: 16px;
    font-weight: var(--font-primary-semibold);
  outline: none;
  cursor: pointer;
  height: 54px;
  width: fit-content;
  padding-left: 41px;
padding-right:  41px;
  
}

button:hover {
  background-color: var(--color-accent);
  color: var(--color-banner-text);
  border-color: var(--color-accent-accent)
}

